--- a/siip.html
+++ b/siip.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
-    {% block static_link %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <title>{% block title %}Image Retrieval System{% endblock %}</title>
+    <title>Image Retrieval System</title>
     <link href="/css/style.css"  rel="stylesheet" type="text/css" media="all">
     <script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
-    {% endblock %}
-
 </head>
 <body>
 <div id="allcontent">
