--- a/siip.html
+++ b/siip.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     <title>Image Retrieval System</title>
-    <link href="/css/style.css"  rel="stylesheet" type="text/css" media="all">
-    <script src="/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <link href="./css/style.css"  rel="stylesheet" type="text/css" media="all">
+    <script src="./js/jquery-1.9.1.min.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="allcontent">
