--- a/siip.html
+++ b/siip.html
@@ -69,13 +69,13 @@
                 <ul class="row1">
                     <li class="teacher imgholder">
                         <span class="rotate">
-                            <img id="lcg" class="labmember" src="/images/labmembers/lcg.jpg")>
+                            <img id="lcg" class="labmember" src="./images/labmembers/lcg.jpg")>
                         </span>
                         <a href="http://person.zju.edu.cn/cgli/573648.html" target="_blank"><p>Chunguang LI Professor</p></a>
                     </li>
                     <li class="teacher imgholder">
                         <span class="rotate">
-                            <img id="ly" class="labmember" src="/images/labmembers/ly.jpg")>
+                            <img id="ly" class="labmember" src="./images/labmembers/ly.jpg")>
                         </span>
                         <a href="http://person.zju.edu.cn/yliu" target="_blank"><p>Ying LIU Associa Professor</p></a>
                     </li>
@@ -83,25 +83,25 @@
                 <ul class="row2">
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="lzt" class="labmember" src="/images/loading3.gif")>
+                            <img id="lzt" class="labmember" src="./images/loading3.gif")>
                         </span>
                         <p>Zhaoting LIU PD</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="ygd" class="labmember" src="/images/loading3.gif")>
+                            <img id="ygd" class="labmember" src="./images/loading3.gif")>
                         </span>
                         <p>Guodong YE PD</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="hjh" class="labmember" src="/images/labmembers/hjh.jpg")>
+                            <img id="hjh" class="labmember" src="./images/labmembers/hjh.jpg")>
                         </span>
                         <p>Junhao HUA D4</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="why" class="labmember" src="/images/labmembers/why.png")>
+                            <img id="why" class="labmember" src="./images/labmembers/why.png")>
                         </span>
                         <p>Heyu Wang D3</p>
                     </li>
@@ -109,25 +109,25 @@
                 <ul class="row3">
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="wsn" class="labmember" src="/images/labmembers/wsn.jpg")>
+                            <img id="wsn" class="labmember" src="./images/labmembers/wsn.jpg")>
                         </span>
                         <p>Shengnan WANG D3</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="xz" class="labmember" src="/images/labmembers/xz.jpg")>
+                            <img id="xz" class="labmember" src="./images/labmembers/xz.jpg")>
                         </span>
                         <p>Zhen XU D2</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="csc" class="labmember" src="/images/labmembers/csc.jpg")>
+                            <img id="csc" class="labmember" src="./images/labmembers/csc.jpg")>
                         </span>
                         <p>Sicong CHEN D1</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="lh" class="labmember" src="/images/labmembers/lh.jpg")>
+                            <img id="lh" class="labmember" src="./images/labmembers/lh.jpg")>
                         </span>
                         <p>Huan Liu D0</p>
                     </li>
@@ -135,25 +135,25 @@
                 <ul class="row4">
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="mxd" class="labmember" src="/images/labmembers/mxd.jpg")>
+                            <img id="mxd" class="labmember" src="./images/labmembers/mxd.jpg")>
                         </span>
                         <p>Xuedan MIAO M2</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="qzj" class="labmember" src="/images/labmembers/qzj.jpg")>
+                            <img id="qzj" class="labmember" src="./images/labmembers/qzj.jpg")>
                         </span>
                         <p>Zhengjie QUAN M1</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="hss" class="labmember" src="/images/labmembers/hss.jpg")>
+                            <img id="hss" class="labmember" src="./images/labmembers/hss.jpg")>
                         </span>
                         <p>Shengshuai HUANG M1</p>
                     </li>
                     <li class="student imgholder">
                         <span class="rotate">
-                            <img id="zyf" class="labmember" src="/images/labmembers/zyf.jpg")>
+                            <img id="zyf" class="labmember" src="./images/labmembers/zyf.jpg")>
                         </span>
                         <p>Yifan ZHAI M0</p>
                     </li>
@@ -176,7 +176,7 @@
                             本课题系统地发展分布式信息处理方法。
                         </p>
                         <div class="clear" ></div>
-                        <img src="/images/works/distributed.png">
+                        <img src="./images/works/distributed.png">
                     </li>
 
                     <li class="workitem" id="hash">
@@ -188,7 +188,7 @@
                             本课题研究基于哈希学习和优化方法的图像检索。
                         </p>
                         <div class="clear" ></div>
-                        <img src="/images/works/hash.png">
+                        <img src="./images/works/hash.png">
                     </li>
 
                     <li class="workitem" id="encrypt">
@@ -201,7 +201,7 @@
                             本课题研究加密域的信息处理方法和协议。
                         </p>
                         <div class="clear" ></div>
-                        <img src="/images/works/encrypt.jpg">
+                        <img src="./images/works/encrypt.jpg">
                     </li>
 
                     <li class="workitem" id="funding">
